Fix alignment of header to be the same as content

--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -132,6 +132,7 @@ and (max-width: 1000px) {
 .application-handling__list-header {
   color: #5E5E5E;
   font-size: 14px;
+  margin-right: 8px;
 }
 
 .application-handling__list-row--selected {
